# agentropic-xbot

./: .env.example  .gitignore  Cargo.toml  README.md
config/: topics.toml
src/: config.rs  main.rs  twitter.rs
src/filters/: mod.rs
src/generators/: mod.rs
src/knowledge/: mod.rs
src/responder/: mod.rs
src/templates/: mod.rs
